# valuechain-ai

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  .sqlfluff  README.md  package-lock.json  package.json  tsconfig.base.json
.playwright-mcp/: page-2026-04-26T08-04-53-256Z.yml  page-2026-04-26T08-37-40-634Z.yml  page-2026-04-26T08-44-21-878Z.yml  page-2026-04-26T08-46-41-044Z.yml  page-2026-04-26T09-03-41-291Z.yml  (+2 more)
apps/api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  railway.json  requirements.txt  uv.err
apps/api/app/: __init__.py
apps/api/app/agents/: __init__.py  checkpointer.py  demo_fixtures.py  deps.py  graph.py  state.py
apps/api/app/agents/nodes/: __init__.py  _trace.py  data_collector.py  evaluator.py  quant_estimator.py  structure_mapper.py
apps/api/app/agents/topology/: __init__.py  memory_semi.py
apps/api/app/config/: __init__.py  settings.py
apps/api/app/db/: __init__.py  repository.py
apps/api/app/middleware/: __init__.py  error_handler.py
apps/api/app/routes/: health.py  runs.py
apps/api/app/schemas/: __init__.py  grounded.py  runs.py
apps/api/app/services/: __init__.py  imputation.py  reconciliation.py  runs.py  stream.py  validation.py
apps/api/app/sources/: __init__.py  dart.py  edgar.py  fx.py  types.py
apps/api/scripts/: benchmark.py  seed_demo.py
apps/api/tests/: test_data_collector.py  test_error_handler.py  test_graph.py  test_grounded.py  test_health.py  test_pipeline_e2e.py  test_quant.py  test_reconciliation.py  test_runs.py  test_sources.py  test_stream.py  test_structure_mapper.py
(+35 files in other folders)
